fix(drawer): change overflow to auto

--- a/packages/assets/css/src/scss/_components/_drawer/_elements/_drawer-body.scss
+++ b/packages/assets/css/src/scss/_components/_drawer/_elements/_drawer-body.scss
@@ -14,7 +14,7 @@
 		@include block($block) {
 			@include element(body) {
 				height: 100%;
-				overflow: scroll;
+				overflow: auto;
 			}
 		}
 	}
